--- a/CookPopularControl/Themes/TabControlStyle.xaml
+++ b/CookPopularControl/Themes/TabControlStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:assistant="clr-namespace:CookPopularControl.Controls.TabControl"
                     xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
 
     <ResourceDictionary.MergedDictionaries>
@@ -8,6 +9,7 @@
 
     <Style x:Key="DefaultTabControlStyle" TargetType="{x:Type TabControl}" BasedOn="{StaticResource TabControlBaseStyle}" >
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="0" />
+        <Setter Property="assistant:TabControlAssistant.IsAddClearButton" Value="True" />
     </Style>
     
 </ResourceDictionary>
