--- a/MvvmTestDemo/DemosView/DialogBoxDemo.xaml
+++ b/MvvmTestDemo/DemosView/DialogBoxDemo.xaml
@@ -14,11 +14,11 @@
                 Command="{x:Static pc:DialogBox.OpenDialogCommand}"
                 Margin="0,50">
             <Button.CommandParameter>
-                <Button Content="CloseDialogBox" Width="100" Height="35" Command="{x:Static pc:DialogBox.CloseDialogCommand}"/>
+                <Button Content="CloseDialogBox" Width="200" Height="35" Command="{x:Static pc:DialogBox.CloseDialogCommand}"/>
             </Button.CommandParameter>
         </Button>
 
-        <Border Width="600" Height="600" pc:DialogBox.Mark="DialogBoxContainer" Background="Red">
+        <Border Width="600" Height="500" pc:DialogBox.Mark="DialogBoxContainer" Background="#FF9C8844">
             <pc:DialogBoxContainer>
                 <StackPanel>
                     <Button Content="OpenDialogBoxInside" Width="300" Height="40" Click="ButtonInherit_Click"/>
