--- a/MvvmTestDemo/DemosView/MenuDemo.xaml
+++ b/MvvmTestDemo/DemosView/MenuDemo.xaml
@@ -113,7 +113,7 @@
                         pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource UpTriangleGeometry}"/>
             </pc:CircleMenu>
 
-            <pc:PopupMenu x:Name="popupMenu" Style="{StaticResource PopupMenuStyle}" PopupPosition="LeftCenter" VerticalContentAlignment="Center" Padding="0">
+            <pc:PopupMenu x:Name="popupMenu" Style="{StaticResource PopupMenuStyle}" PopupPosition="LeftCenter" VerticalContentAlignment="Center" Padding="0" Margin="0,20">
                 <Button Style="{StaticResource DemoButtonStyle}"  Click="Button_Click"/>
                 <Button Style="{StaticResource DemoButtonStyle}" Margin="0,10"
                         pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource DateGeometry}"/>
