--- a/MvvmTestDemo/UserControls/AdornerDemo.xaml
+++ b/MvvmTestDemo/UserControls/AdornerDemo.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="MvvmTestDemo.DemosView.AdornerDemo"
+﻿<UserControl x:Class="MvvmTestDemo.UserControls.AdornerDemo"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MvvmTestDemo.DemosView"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
-             mc:Ignorable="d" x:Name="RootDecorator" Background="OliveDrab"
+             mc:Ignorable="d" x:Name="RootDecorator" Background="#FF9C8844"
              d:DesignHeight="450" d:DesignWidth="800" Focusable="True"
-             Width="500" Height="500">
+             Width="400" Height="400">
 
     <StackPanel x:Name="RootGrid" VerticalAlignment="Center">
         <Button x:Name="ChanceBtn" Content="Chance" Width="300" Height="40"/>
